# rl-recsys

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: validate.yml
conf/: hydra.yaml  train.yaml
conf/agent/: linucb.yaml  random.yaml
conf/env/: finn_no_slate.yaml  kuairec.yaml  logged.yaml  rl4rs.yaml  synthetic.yaml
docs/: datasets.md
experiments/: run.py  run_dataset_bandit.py  run_ope_benchmark.py  run_synthetic.py
external_work/: README.md
rl_recsys/: __init__.py  config.py  runtime.py
scripts/: benchmark_agent_grid.py  benchmark_rl4rs_b_seq_dr.py  prepare_data.py
tests/: conftest.py  test_agent_grid_runner.py  test_agent_grid_smoke.py  test_agents.py  test_agents_dataset_agnostic.py  test_agents_dl.py  test_agents_heuristic.py  test_agents_imitation.py  test_agents_linear_bandit.py  test_agents_neural.py  test_behavior_policy.py  test_config.py  test_dataset_base.py  test_download.py  test_env_finn_no_slate.py  test_env_kuairec.py  test_env_rl4rs.py  test_environments.py  test_factory.py  test_features.py  test_logged_bandit.py  test_metrics.py  test_offline_pretrain.py  test_ope.py  test_ope_benchmark.py  test_ope_trajectory.py  test_pipeline_amazon.py  test_pipeline_book_crossing.py  test_pipeline_finn_no_slate.py  test_pipeline_gowalla.py  test_pipeline_kuairec.py  test_pipeline_movielens.py  test_pipeline_open_bandit.py  test_pipeline_rl4rs.py  test_pipeline_steam.py  test_recobs.py  test_registry.py  test_results_aggregator.py  test_rl4rs_pipeline.py  test_rl4rs_trajectory_ope.py  (+5 more)
tools/: validate_repo.py
(+111 files in other folders)
