[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-recsys"
version = "0.1.0"
description = "RL-based recommendation ranking"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3,<2",
    "mlflow>=2.17",
    "torch>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyarrow>=14.0",
    "wandb>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["rl_recsys*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
